--- a/puppet/compute-post.yaml
+++ b/puppet/compute-post.yaml
@@ -17,6 +17,17 @@ parameters:
 
 resources:
 
+  ComputeArtifactsConfig:
+    type: deploy-artifacts.yaml
+
+  ComputeArtifactsDeploy:
+    type: OS::Heat::StructuredDeployments
+    properties:
+      servers:  {get_param: servers}
+      config: {get_resource: ComputeArtifactsConfig}
+      input_values:
+        update_identifier: {get_param: NodeConfigIdentifiers}
+
   ComputePuppetConfig:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -30,6 +41,7 @@ resources:
 
   ComputePuppetDeployment:
     type: OS::Heat::StructuredDeployments
+    depends_on: ComputeArtifactsDeploy
     properties:
       name: ComputePuppetDeployment
       servers:  {get_param: servers}
