Add support for DeployArtifactURLs
Adds a new nested stack deployment which allows operators to
opt-in to deploy tarball's and RPM packages by setting
DeployArtifactURLs as a parameter_default in a Heat
environment.

The intent is to use this setting to allow t-h-t to
transparently deploy things like tarballs of puppet modules
via a Swift Temp URL.

Change-Id: I1bad4a4a79cf297f5b6e439e0657269738b5f326
Implements: blueprint puppet-modules-deployment-via-swift
(cherry picked from commit 55054f02d77ebbca63b6fbd3eab285873452933e)

--- a/puppet/ceph-storage-post.yaml
+++ b/puppet/ceph-storage-post.yaml
@@ -14,8 +14,19 @@ parameters:
      type: json
      description: Value which changes if the node configuration may need to be re-applied
 
-
 resources:
+
+  CephStorageArtifactsConfig:
+    type: deploy-artifacts.yaml
+
+  CephStorageArtifactsDeploy:
+    type: OS::Heat::StructuredDeployments
+    properties:
+      servers:  {get_param: servers}
+      config: {get_resource: CephStorageArtifactsConfig}
+      input_values:
+        update_identifier: {get_param: NodeConfigIdentifiers}
+
   CephStoragePuppetConfig:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -29,6 +40,7 @@ resources:
 
   CephStorageDeployment_Step1:
     type: OS::Heat::StructuredDeployments
+    depends_on: CephStorageArtifactsDeploy
     properties:
       servers:  {get_param: servers}
       config: {get_resource: CephStoragePuppetConfig}
