--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -12,8 +12,18 @@ parameters:
      type: json
      description: Value which changes if the node configuration may need to be re-applied
 
-
 resources:
+
+  StorageArtifactsConfig:
+    type: deploy-artifacts.yaml
+
+  StorageArtifactsDeploy:
+    type: OS::Heat::StructuredDeployments
+    properties:
+      servers:  {get_param: servers}
+      config: {get_resource: StorageArtifactsConfig}
+      input_values:
+        update_identifier: {get_param: NodeConfigIdentifiers}
 
   StoragePuppetConfig:
     type: OS::Heat::SoftwareConfig
@@ -28,6 +38,7 @@ resources:
 
   StorageDeployment_Step1:
     type: OS::Heat::StructuredDeployments
+    depends_on: StorageArtifactsDeploy
     properties:
       servers:  {get_param: servers}
       config: {get_resource: StoragePuppetConfig}
