Make all network ports type to consume FixedIPs
This change adds to the internal_api, storage, storage_mgmt and
tenant network ports the FixedIPs param and make them consume it
when passed.

Change-Id: Ica2bca9f573b206cc60c9d572224a8cc7b9b8aa4
(cherry picked from commit 9e9273a8e5211f8e9b701c291ad332d5375e2198)

--- a/network/ports/storage.yaml
+++ b/network/ports/storage.yaml
@@ -16,6 +16,12 @@ parameters:
     description: IP address on the control plane
     default: ''
     type: string
+  FixedIPs:
+    description: >
+        Control the IP allocation for the VIP port. E.g.
+        [{'ip_address':'1.2.3.4'}]
+    default: []
+    type: json
   IPPool: # Here for compatibility with from_pool.yaml
     default: {}
     type: json
@@ -30,6 +36,7 @@ resources:
     properties:
       network: {get_param: StorageNetName}
       name: {get_param: PortName}
+      fixed_ips: {get_param: FixedIPs}
       replacement_policy: AUTO
 
 outputs:
