Make all network ports type to consume FixedIPs
This change adds to the internal_api, storage, storage_mgmt and
tenant network ports the FixedIPs param and make them consume it
when passed.

Change-Id: Ica2bca9f573b206cc60c9d572224a8cc7b9b8aa4

--- a/network/ports/internal_api.yaml
+++ b/network/ports/internal_api.yaml
@@ -15,6 +15,12 @@ parameters:
   ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     type: string
+  FixedIPs:
+    description: >
+        Control the IP allocation for the VIP port. E.g.
+        [{'ip_address':'1.2.3.4'}]
+    default: []
+    type: json
 
 resources:
 
@@ -23,6 +29,7 @@ resources:
     properties:
       network: {get_param: InternalApiNetName}
       name: {get_param: PortName}
+      fixed_ips: {get_param: FixedIPs}
       replacement_policy: AUTO
 
 outputs:
