Enable configuration of Neutron QoS
This change adds support for setting the configuration options required
to enable the quality of service feature in Neutron. The default values
will enable the feature.

Closes-Bug: #1524052

Depends-On: Iefc289a6eee13b9c66f8131c258af982f232df4b

Change-Id: I1abf7d37d39e6927e482b56de4ee3d3d7c313a1c
(cherry picked from commit c9f12915ef80bbbe5bb94177c8124ff9aa217c2e)

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -197,7 +197,7 @@ parameters:
         from neutron.core_plugins namespace.
     type: string
   NeutronServicePlugins:
-    default: "router"
+    default: "router,qos"
     description: |
         Comma-separated list of service plugin entrypoints to be loaded from the
         neutron.service_plugins namespace.
@@ -211,6 +211,16 @@ parameters:
     default: 'openvswitch'
     description: |
         The mechanism drivers for the Neutron tenant network.
+    type: comma_delimited_list
+  NeutronPluginExtensions:
+    default: "qos"
+    description: |
+        Comma-separated list of extensions enabled for the Neutron plugin.
+    type: comma_delimited_list
+  NeutronAgentExtensions:
+    default: "qos"
+    description: |
+        Comma-separated list of extensions enabled for the Neutron agents.
     type: comma_delimited_list
   NeutronAllowL3AgentFailover:
     default: 'False'
@@ -880,6 +890,8 @@ resources:
           NeutronServicePlugins: {get_param: NeutronServicePlugins}
           NeutronTypeDrivers: {get_param: NeutronTypeDrivers}
           NeutronMechanismDrivers: {get_param: NeutronMechanismDrivers}
+          NeutronPluginExtensions: {get_param: NeutronPluginExtensions}
+          NeutronAgentExtensions: {get_param: NeutronAgentExtensions}
           NeutronAllowL3AgentFailover: {get_param: NeutronAllowL3AgentFailover}
           NeutronL3HA: {get_param: NeutronL3HA}
           NeutronDhcpAgentsPerNetwork: {get_param: NeutronDhcpAgentsPerNetwork}
@@ -973,6 +985,7 @@ resources:
           NeutronServicePlugins: {get_param: NeutronServicePlugins}
           NeutronTypeDrivers: {get_param: NeutronTypeDrivers}
           NeutronMechanismDrivers: {get_param: NeutronMechanismDrivers}
+          NeutronAgentExtensions: {get_param: NeutronAgentExtensions}
           # L3 HA and Failover is not relevant for Computes, should be removed
           NeutronAllowL3AgentFailover: {get_param: NeutronAllowL3AgentFailover}
           NeutronL3HA: {get_param: NeutronL3HA}
