Change default host reserved memory to 2048MB from 512MB
Results from pmap of idle nova-compute:
  https://gist.github.com/jtaleric/addd9079d6cdf4f7cf42

Results from free -m and cat /proc/meminfo:
  https://gist.github.com/jtaleric/410130f09c2aad2dc7e9

bug: https://bugzilla.redhat.com/show_bug.cgi?id=1282644
Change-Id: I9b3ceecabfdae0a516cfc72886fde7b26cc68f82

--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -15,6 +15,12 @@ nova::compute::rbd::rbd_keyring: 'client.openstack'
 nova::compute::rbd::libvirt_images_rbd_pool: 'vms'
 nova::compute::rbd::libvirt_rbd_secret_uuid: "%{hiera('ceph::profile::params::fsid')}"
 
+# Changing the default from 512MB. The current templates can not deploy
+# overclouds with swap. On an idle compute node, we see ~1024MB of RAM
+# used. 2048 is suggested to account for other possible operations for
+# example openvswitch.
+nova::compute::reserved_host_memory: 2048
+
 ceilometer::agent::auth::auth_tenant_name: 'service'
 
 compute_classes: []
