Allows for customization of NetworkDeployment actions
We don't necessarily want the network configuration to be reapplied
with every template update so we add a param to configure on which
action the NetworkDeployment resource should be executed.

Change-Id: I0e86318eb5521e540cc567ce9d77e1060086d48b
Co-Authored-By: Dan Sneddon <dsneddon@redhat.com>
Co-Authored-By: James Slagle <jslagle@redhat.com>
Co-Authored-By: Jiri Stransky <jstransk@redhat.com>
Co-Authored-By: Steven Hardy <shardy@redhat.com>
(cherry picked from commit 52d19892c12ff785adc0f914647307c1287c059c)

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -54,6 +54,11 @@ parameters:
     description: |
       Role specific additional hiera configuration to inject into the cluster.
     type: json
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
   ServerMetadata:
     default: {}
     description: >
@@ -146,6 +151,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: CephStorage}
+      actions: {get_param: NetworkDeploymentActions}
 
   CephStorageDeployment:
     type: OS::Heat::StructuredDeployment
