--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -107,6 +107,11 @@ parameters:
   MysqlVirtualIP:
     type: string
     default: ''
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
   ServerMetadata:
     default: {}
     description: >
@@ -127,7 +132,6 @@ parameters:
     description: >
       The DNS domain used for the hosts. This should match the dhcp_domain
       configured in the Undercloud neutron. Defaults to localdomain.
-
 
 resources:
   BlockStorage:
@@ -201,6 +205,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: BlockStorage}
+      actions: {get_param: NetworkDeploymentActions}
 
   BlockStorageDeployment:
     type: OS::Heat::StructuredDeployment
