--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -77,6 +77,11 @@ parameters:
     description: |
       Role specific additional hiera configuration to inject into the cluster.
     type: json
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
   ServerMetadata:
     default: {}
     description: >
@@ -97,7 +102,6 @@ parameters:
     description: >
       The DNS domain used for the hosts. This should match the dhcp_domain
       configured in the Undercloud neutron. Defaults to localdomain.
-
 
 resources:
 
@@ -171,6 +175,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: SwiftStorage}
+      actions: {get_param: NetworkDeploymentActions}
 
   SwiftStorageHieraConfig:
     type: OS::Heat::StructuredConfig
