--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -285,6 +285,11 @@ parameters:
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
   ServerMetadata:
     default: {}
     description: >
@@ -305,7 +310,6 @@ parameters:
     description: >
       The DNS domain used for the hosts. This should match the dhcp_domain
       configured in the Undercloud neutron. Defaults to localdomain.
-
 
 resources:
 
@@ -382,6 +386,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: NovaCompute}
+      actions: {get_param: NetworkDeploymentActions}
       input_values:
         bridge_name: {get_param: NeutronPhysicalBridge}
         interface_name: {get_param: NeutronPublicInterface}
