--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -608,6 +608,11 @@ parameters:
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
   NodeIndex:
     type: number
     default: 0
@@ -631,7 +636,6 @@ parameters:
     type: string
     constraints:
     - allowed_values: [POLL_SERVER_CFN, POLL_SERVER_HEAT, POLL_TEMP_URL, ZAQAR_MESSAGE]
-
 
 resources:
 
@@ -740,6 +744,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: Controller}
+      actions: {get_param: NetworkDeploymentActions}
       input_values:
         bridge_name: br-ex
         interface_name: {get_param: NeutronPublicInterface}
