Allows for customization of NetworkDeployment actions
We don't necessarily want the network configuration to be reapplied
with every template update so we add a param to configure on which
action the NetworkDeployment resource should be executed.

Change-Id: I0e86318eb5521e540cc567ce9d77e1060086d48b
Co-Authored-By: Dan Sneddon <dsneddon@redhat.com>
Co-Authored-By: James Slagle <jslagle@redhat.com>
Co-Authored-By: Jiri Stransky <jstransk@redhat.com>
Co-Authored-By: Steven Hardy <shardy@redhat.com>

--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -107,6 +107,11 @@ parameters:
   MysqlVirtualIP:
     type: string
     default: ''
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
 
 resources:
   BlockStorage:
@@ -178,6 +183,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: BlockStorage}
+      actions: {get_param: NetworkDeploymentActions}
 
   BlockStorageDeployment:
     type: OS::Heat::StructuredDeployment
