--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -273,6 +273,11 @@ parameters:
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
 
 resources:
 
@@ -347,6 +352,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: NovaCompute}
+      actions: {get_param: NetworkDeploymentActions}
       input_values:
         bridge_name: {get_param: NeutronPhysicalBridge}
         interface_name: {get_param: NeutronPublicInterface}
