--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -606,6 +606,11 @@ parameters:
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
 
 resources:
 
@@ -702,6 +707,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: Controller}
+      actions: {get_param: NetworkDeploymentActions}
       input_values:
         bridge_name: br-ex
         interface_name: {get_param: NeutronPublicInterface}
