--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -77,7 +77,11 @@ parameters:
     description: |
       Role specific additional hiera configuration to inject into the cluster.
     type: json
-
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
 
 resources:
 
@@ -149,6 +153,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: SwiftStorage}
+      actions: {get_param: NetworkDeploymentActions}
 
   SwiftStorageHieraConfig:
     type: OS::Heat::StructuredConfig
