--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -54,7 +54,11 @@ parameters:
     description: |
       Role specific additional hiera configuration to inject into the cluster.
     type: json
-
+  NetworkDeploymentActions:
+    type: comma_delimited_list
+    description: >
+      Heat action when to apply network configuration changes
+    default: ['CREATE']
 
 resources:
   CephStorage:
@@ -126,6 +130,7 @@ resources:
     properties:
       config: {get_resource: NetworkConfig}
       server: {get_resource: CephStorage}
+      actions: {get_param: NetworkDeploymentActions}
 
   CephStorageDeployment:
     type: OS::Heat::StructuredDeployment
