Point registry at tripleoupstream
The tripleoupstream registry contains images that are built
every time there is a change in delorean.

The gate also needs this.

Change-Id: If460853284588f637de820afa54069f773f2e6f7

--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -11,7 +11,7 @@ parameters:
      description: Value which changes if the node configuration may need to be re-applied
   DockerNamespace:
     type: string
-    default: kollaglue
+    default: tripleoupstream
   DockerComputeImage:
     type: string
   DockerComputeDataImage:
