--- a/environments/docker-rdo.yaml
+++ b/environments/docker-rdo.yaml
@@ -7,18 +7,17 @@ resource_registry:
 parameters:
   NovaImage: atomic-image
 
-# FIXME: When Kolla cuts liberty tag we can use kollaglue registry
 parameter_defaults:
-  # Defaults to kollaglue.  Specify a local docker registry
+  # Defaults to 'tripleoupstream'.  Specify a local docker registry
   # Example: 192.168.122.131:8787
-  DockerNamespace: kollaglue
+  DockerNamespace: tripleoupstream
   # Enable local Docker registry
   DockerNamespaceIsRegistry: false
   # Compute Node Images
-  DockerComputeImage: centos-binary-nova-compute:liberty
-  DockerComputeDataImage: centos-binary-data:liberty
-  DockerLibvirtImage: centos-binary-nova-libvirt:liberty
-  DockerNeutronAgentImage: centos-binary-neutron-agents:liberty
-  DockerOpenvswitchImage: centos-binary-neutron-openvswitch-agent:liberty
-  DockerOvsVswitchdImage: centos-binary-openvswitch-vswitchd:liberty
-  DockerOpenvswitchDBImage: centos-binary-openvswitch-db-server:liberty
+  DockerComputeImage: centos-binary-nova-compute:latest
+  DockerComputeDataImage: centos-binary-data:latest
+  DockerLibvirtImage: centos-binary-nova-libvirt:latest
+  DockerNeutronAgentImage: centos-binary-neutron-agents:latest
+  DockerOpenvswitchImage: centos-binary-neutron-openvswitch-agent:latest
+  DockerOvsVswitchdImage: centos-binary-openvswitch-vswitchd:latest
+  DockerOpenvswitchDBImage: centos-binary-openvswitch-db-server:latest
