--- a/network/ports/noop.yaml
+++ b/network/ports/noop.yaml
@@ -16,7 +16,7 @@ parameters:
     default: ''
     type: string
   NetworkName:
-    description: # Here for compatability with vip.yaml
+    description: # Here for compatibility with vip.yaml
     default: ''
     type: string
   FixedIPs:
