--- a/network/ports/external.yaml
+++ b/network/ports/external.yaml
@@ -13,7 +13,7 @@ parameters:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatability with noop.yaml
+  ControlPlaneIP: # Here for compatibility with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
