Minor fixes to TLS related resources
* Fixed a comment to avoid ambiguity with concepts in Heat
* Removed default values from necessary parameters in the TLS
  environment
* Simplified setting of the cert/key into a file.

Change-Id: I351778150a6fbf7affe1a0fddb1abb9869324dfc
(cherry picked from commit ab231006a9c295f3afc669979896e8e589a0bccf)

--- a/puppet/extraconfig/tls/no-tls.yaml
+++ b/puppet/extraconfig/tls/no-tls.yaml
@@ -13,10 +13,10 @@ parameters:
     description: >
         The filepath of the certificate as it will be stored in the controller.
     type: string
-  NodeIndex: # Here for compatibility with tls-cert-inject.yaml
+  NodeIndex: # Here for compatibility with puppet/controller.yaml
     default: 0
     type: number
-  server:    # Here for compatibility with tls-cert-inject.yaml
+  server:    # Here for compatibility with puppet/controller.yaml
     description: ID of the controller node to apply this config to
     type: string
 
