--- a/puppet/extraconfig/tls/tls-cert-inject.yaml
+++ b/puppet/extraconfig/tls/tls-cert-inject.yaml
@@ -7,7 +7,6 @@ description: >
 parameters:
   # Can be overriden via parameter_defaults in the environment
   SSLCertificate:
-    default: ''
     description: >
       The content of the SSL certificate (without Key) in PEM format.
     type: string
@@ -17,7 +16,6 @@ parameters:
       The content of an SSL intermediate CA certificate in PEM format.
     type: string
   SSLKey:
-    default: ''
     description: >
       The content of the SSL Key in PEM format.
     type: string
@@ -53,7 +51,7 @@ resources:
         - name: key_modulus
       config: |
         #!/bin/sh
-        cat << EOF | tee ${cert_path} > /dev/null
+        cat > ${cert_path} << EOF
         ${cert_chain_content}
         EOF
         chmod 0440 ${cert_path}
