--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -683,7 +683,7 @@ resources:
     properties:
       server: {get_resource: Controller}
 
-  # Hook for site-specific passing of private keys/certificates
+  # Resource for site-specific passing of private keys/certificates
   NodeTLSData:
     depends_on: NodeTLSCAData
     type: OS::TripleO::NodeTLSData
